--- a/vanilla-js-resume/styles.css
+++ b/vanilla-js-resume/styles.css
@@ -1,234 +1,267 @@
 
-textarea {
-    width: 90%;
-    height:90px;
-}
-.fullwidth {
-    width: 100% !important;
+
+.firstLastName {
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+   
 }
-.previewbutton {
+.menuBar {
+    margin: 2%;
+}
+
+.nextButton, .menuBarButton {
+    border: 1px solid green;
+    background-color: rgb(240, 248, 243);
+    
+}
+
+.menuBarButton:hover {
+   background-color: rgb(42, 96, 58);
+   color: white;
+}
+.changeColor {
+    background-color:rgb(37, 94, 57) ;
+     color: white;
+}
+.halfChild {
+    flex-basis: 47%;
+}
+.smallChild {
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.bigChild{
+    width: 75%;
+}
+
+.profileLabel {
+    text-align: center;
+}
+.pic {
+    border-radius: 50%;
+}
+.buttonImage,.profileLabel,.pic {
+    width: 60%;
+    margin: auto;
+   
+}
+
+
+.previewButton {
     display: flex;
     justify-content: center;
-    margin: auto;
-
-}
-body {
-    height: 100%;
-    font-size: calc(0.75em + 1vmin);
-    /* font-size: 1rem; */
-    /* overflow: auto; */
-}
-html {
-    --root-font-size: calc(10px + (16 - 8) * ((100vw - 300px) / (1600 - 300)));
-      font-size: var(--root-font-size);
-      /* font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300))); */
-}
-.resume-main {
-    font-size: var(--root-font-size);
-    overflow: auto;
-}
-
-span,p {
-   font-size: calc( var(--root-font-size)*(1) );
-}
-h1 {
-    font-size: calc( var(--root-font-size)*(2) );
-}
-h2 {
-    font-size: calc( var(--root-font-size)*(1.5 ) );
-    /* font-size: calc(14px + (26 - 14) * ((100vw - 300px) / (1600 - 300))); */
-}
-h3 {
-    font-size: calc( var(--root-font-size)*(1.25) );
-}
-h4 {
-    font-size: calc( var(--root-font-size)*(1) );
-}
-.hidden-form {
-    visibility: hidden;
-}
-.main {
-    display: flex;
-    justify-content: space-between;
-    flex-flow: row;
-}
-label {
-      /* margin: 2%; */
-      width: 90%;
-      text-align: start;
-      /* margin-bottom: 1%; */
-      margin-left: 1%;
-      /* padding: auto; */
-}
-input {
-    width: 90%;
-    margin-left: 1%;
-    /* border: 2px solid rgb(109, 103, 109); */
-    /* border-radius: 5%; */
-    /* background-color: #ede9e3; */
-    height: 1.5rem;
-}
-.button-style {
-    display: flex;
-    
-    justify-content: space-around;
+    margin-top:2%;
    
 
 }
+
+.prevButton,.nextButton {
+    /* width: ; */
+}
+
+#preview:hover {
+    background-color: rgb(184, 213, 241);
+}
+.prevButton,.buttonImage,.resetButton,#preview {
+    border: 1px solid rgb(36, 97, 230);
+    background-color: white;
+    color:rgb(36, 97, 230);
+    
+}
+:where(.buttonImage,.resetButton,.prevButton):hover {
+    background-color: rgb(184, 213, 241);
+  
+}
+.submitButton:hover {
+    background-color: rgb(154, 28, 28);
+}
+
+.submitButton {
+     background-color: rgb(211, 8, 8);
+     color: white;
+     border: 1px solid rgb(32, 2, 2);
+}
+.submitButton:disabled {
+   opacity: 0.2;
+}
+
+
+label {
+    display: block;
+    margin-bottom: 0.3rem;
+    font-size: 1.25rem;
+    
+
+}
+.formMargin {
+    padding: 2% 0%;
+}
+#profile-img {
+    border: hidden;
+    visibility: hidden;
+    width: 0;
+    height: 0;
+    margin: 0;
+    padding: 0;
+}
+label,button {
+    font-weight: bold;
+    font-family:'Times New Roman', Times, serif;
+}
+textarea {
+    width: 100%;
+    height:50px;
+    font-size: 1.25rem;
+
+}
+html {
+    font-size: 16px;
+}
+
+h3 {
+   border-bottom:1px solid rgb(216,204,190);
+}
+
+
+span,p,h4,a {
+   font-size: 1.3em ;
+   /* overflow: auto; */
+}
+h1 {
+    font-size: 2em ;
+}
+h2 {
+    font-size: 1.5em ;
+    overflow: auto;
+}
+h3 {
+    font-size: 1.5em ;
+}
+
+
+.main {
+    display: flex;
+    flex-direction: row;
+}
+
+input{
+    font-size: 1.25rem;
+    width: 100%;
+    box-sizing:border-box;
+
+    border: 1px solid #D7DDE1;
+    display: block;
+    padding: 0.5rem;
+    background-color: white;
+    
+}
+
+.buttonParent {
+    display: flex;
+    justify-content: space-between;
+}
+.closeModalButton {
+     margin:auto;
+     display: block;
+     margin-bottom:2%;
+    
+}
+.modal {
+    border: hidden;
+}
 button {
-    /* width: 40%; */
-    /* box-sizing: content-box; */
-    
-    /* margin-left: 20%; */
-    /* border-radius: 10%; */
-    width:5rem;
-    height: 2rem;
+    height: auto;
+    padding: 0.5rem;
+    font-size: 1.3rem;
+    cursor: pointer;
 }
-#resume-form {
-    width: 80%;
-    text-align: center;
-    margin: auto;
-    height: 2rem;
-}
-.form-layout {
-    /* width: 50%; */
-    /* background-color: rgb(163, 201, 235); */
-    /* border: 1px solid #261f17; */
-
-    /* align-self: center; */
-    /* justify-content: center; */
-      /* margin: 3% 3%; */
-      display: flex;
-     /* margin-left: auto; */
-     flex-direction: column;
-     /* text-ali    gn: center; */
-     margin: 5%;
-    
-     
-     
-    
+.introduction-section {
+    display: flex;
+    flex-direction: column;
 }
 
-.form-main {
-    width: 40%;
-    border: 1px solid rgb(215, 215, 231);
+
+.formOptions {
+    width: 64%;
     margin: 3%;
-    background-color: rgb(233, 237, 240);
-    /* display: flex; */
-
+    padding: 2%;
+    border: 1px solid lightgreen;
 }
 .resume-main {
-    /* border: 1px solid rgb(52, 54, 52); */
-    width: 60%;
-    /* height:3508px; */    
-    
+
+    width: 87em;
     display: flex;
-    justify-content: center;
-    position: relative;
     margin: 3%;
     border: 1PX solid rgb(216, 211, 211);
-    background-color: #F6F1EB;
+    font-size: 8px;
+    height:90em;
+    /* padding: 2rem; */
 
 }
-.dotted-line {
-    border: none;
-    border-top: 1px dotted rgb(216,204,190);
-    color: rgb(61, 54, 54)(209, 89, 89);
-    background-color: rgb(134, 24, 24);
-    height: 1px;
-    /* height: 20%; */
-    /* width:30%; */
-    /* width:fit-content; */
-    margin-top:6%
-  }
 
   .sub-heading {    
     color:rgb(209,196,171);
-    margin-top: 0%;
+    
   }
   .name {
-    word-break: break-all;
-    margin-top:10%;
-    margin-bottom: 0%;
+    word-break: normal ;
     color: rgb(76, 51, 21);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    margin:auto 0;
+    
+   
 }
   .icon-color {
     background-color: rgb(209,196,171);
     border: 1px solid white;
-    border-radius: 25px;
-    padding: 10px;
-    color:white; 
-    align-self: flex-start;
+    border-radius: 50%;
+    padding: 1em;
+    height: 30%;
+    color: white;
+   
   }
 
 .left {
-    /* border: 1px solid rgb(195, 170, 219); */
-    width:33%;
+   
     background-color: #F6F1EB;
     display: flex;
-    position : relative;
+    width:30%;
     flex-direction: column;
-    align-items: center;
+    padding: 2%;
+    /* font-size: 1em; */
+    /* overflow: auto; */
+    
 
 }
 .body {
     color: rgb(76, 51, 21);
 }
 .right {
-    /* border: 1px solid grey; */
-    width:67%;
+    width:62%;
     display: flex;
-    position: relative;
     flex-direction: column;
     background-color: white;
-    /* overflow: hidden; */
+    padding: 2%;
+    /* font-size:1em; */
+    /* overflow: auto; */
 }
 
-.pic {  
-    margin: 10%;
-    /* padding: 5%; */
-    border-radius: 50%;
-    width: 60%;
-    /* height:20%; */
-    width:"250px" ;
-    height:"250px";
-}
-h3 {
-    text-align: left;
-    margin-left:0px;
-}
 
-.icon-layout {
-    display: flexbox;
-   
-    flex-direction: column;
-    
-}
+
 .section-layout {
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content:space-between;
-    
 }
 .icon-info {
     margin:auto;
     width: 60%;
-    word-wrap: break-word;
-}
-
-.header-info {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin: auto;
-    padding: auto;
-
+    word-break: break-word;
 
 }
+
+
 .small-content-item {
     flex: 20%;
 }
@@ -236,6 +269,7 @@ h3 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-bottom: 2%;
 }
 .extreme-right-item {
     text-align: end;
@@ -243,15 +277,13 @@ h3 {
 .logo { 
     margin: auto 5%;
     margin-left: 0;
-}
-.section-name {
-    margin-right: auto;
-    
-    /* margin-left:5%; */
+
 }
 
+
 .paragraph {
-    overflow-wrap: break-word;
+    word-break: break-word;
+    /* overflow:scroll; */
 }
 .content-item {
   flex:50%;
@@ -259,16 +291,10 @@ h3 {
   padding: 0 0;
 }
 span {
-    text-align: center;
     font-weight: bold;
 }
 
 .content-layout {
-    margin-left:5%;
-    margin-top:2%;
-    margin-right: 5%;
-    margin-bottom: 2%; 
-    width: 90%;  
     display: flex;
     flex-direction: column;
 
@@ -276,49 +302,50 @@ span {
 
 .parent-small-item {
     display: flex;
-    flex-wrap: wrap;
     padding-left: 0%;
-    /* margin-left:5%; */
-    justify-content: space-between;
 }
 .small-item {
     list-style: none;
     flex: 33%;
-    justify-content:left;
-
-  
 }
 
 @media  only screen and (max-width:549px)  {
-    .resume_main {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+    body {
+        font-size: 5px;
     }
+    .resume-main {
+        flex-direction: column;
+   }
     .left {
-        flex:100%;
-        width:100%;
+        width:96%;
     }
     .right {
-        flex:100%;
-        width:100%;
+        width:96%;
     }
-
-    /* .section-name {
-        margin-left: 5%;
-    } */
+   
+    .pic {
+        width: 40%;
+    }
+    
+    .name,.sub-heading {
+        margin: 2% auto;
+    }   
+   
     
 }
 
 @media only screen and (max-width:848px) {
-    .resume_main {
-      width: 100%;
+    html {
+        font-size: 8px;
     }
+  
+   
 }
 
-@media only screen and (max-width:1230px) {
-    .dotted-line {
-        display: none;
+/* @media only screen and ( (min-width:849px) and (max-width:1230px) ) {
+   
+    html {
+        font-size: 10px;
     }
     
-}
+} */
